# yalchat

./: .gitignore  Dockerfile_backend  Dockerfile_frontend  Makefile  README.md  atlas.hcl  docker-compose.yml  pyproject.toml
yalchat_server/: __main__.py  api.py  app.py  auth.py  auth_views.py  config.py  db.py  deps.py  types.py
yalchat_server/api/: __init__.py  chats.py  simple_chat.py  users.py
yalchat_server/db/: __init__.py  db.py  dialects.py  schema.py
yalchat_server/repo/: __init__.py  chats.py  users.py
yalchat_server/services/: chat.py  llm.py
yalchat_web_base/: package-lock.json  package.json
yalchat_web_base/public/: index.html
yalchat_web_base/src/: App.css  App.js  config.js  constants.js  index.css
yalchat_web_base/src/api/: chatReader.js  chats.js  users.js
yalchat_web_base/src/components/: Chat.css  Chat.js  ChatInterface.css  ChatInterface.js  ChatList.js  ChatMessage.js  LoginForm.js  NavBar.css  NavBar.js
